--- a/components.json
+++ b/components.json
@@ -13,9 +13,9 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "@components/",
-    "utils": "@/lib/ui/utils",
+    "utils": "@lib/utils/ui/utils.ts",
     "ui": "@components/ui",
-    "lib": "@/lib",
+    "lib": "@lib",
     "hooks": "@/hooks"
   },
   "registries": {}
