refactor: simplify main layout and reuse shared components

--- a/components.json
+++ b/components.json
@@ -13,7 +13,7 @@
   "iconLibrary": "lucide",
   "aliases": {
     "components": "@components/",
-    "utils": "@lib/utils/ui/utils.ts",
+    "utils": "@lib/ui/utils.ts",
     "ui": "@components/ui",
     "lib": "@lib",
     "hooks": "@/hooks"
